--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "next": "latest",
+    "next-redux-wrapper": "^7.0.5",
+    "pako": "^2.0.4",
     "prop-types": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-redux": "^7.2.6",
+    "recharts": "latest",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "latest",
