--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "next": "latest",
+    "next-intl": "^2.3.4",
     "next-redux-wrapper": "^7.0.5",
     "pako": "^2.0.4",
     "prop-types": "latest",
